# whatdidyoudo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
assets/: demo-setup.sh  demo.tape
docs/: architecture.md  research.md  roadmap.md  user-experience.md
fixtures/: session_committed.jsonl  session_false_verdicts.jsonl  session_noise.jsonl  session_typical.jsonl
src/: discovery.rs  evidence.rs  ingestion.rs  lib.rs  main.rs  report.rs
src/analyzers/: blast_radius.rs  claims.rs  commands.rs  mod.rs
tests/: analyze_fixtures.rs  claims.rs  cli.rs  git_evidence.rs  parse_fixtures.rs  report.rs
tests/snapshots/: parse_fixtures__noise_session_timeline.snap  parse_fixtures__typical_session_timeline.snap
