[package]
name = "whatdidyoudo"
version = "0.1.0"
edition = "2021"
description = "Audit completed AI coding agent sessions: cross-check the agent's claims against what it actually did."
license = "MIT OR Apache-2.0"
repository = "https://github.com/keenanjohnson/whatdidyoudo"
readme = "README.md"
keywords = ["ai", "agent", "audit", "claude", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "whatdidyoudo"
path = "src/lib.rs"

[[bin]]
name = "wdyd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
owo-colors = "4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["parsing"] }
walkdir = "2"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
